# re-speedrun-overlay

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build.bat
bench/: benches.cpp  benches.h
src/: Speedrun.cpp  Speedrun.h  enums.h  main.cpp
src/imgui/: imconfig.h
src/rendering/: d3d11.cpp  d3d12.cpp  d3d12.hpp
src/utilities/: Config.cpp  Config.h  Mod.h  String.cpp  String.h
